[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Madixxx22 <vysokolyan2016@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
packages = [{include = "brain-games"}]
brain-games = "brain_games.scripts.brain_games:main"